apps/bosnia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bosnia
  labels:
    app.kubernetes.io/part-of: gitops
