apps/bosnia/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bosnia
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: gitops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 80
      targetPort: http
