apps/bosnia/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bosnia-static
  namespace: bosnia
  labels:
    app.kubernetes.io/name: bosnia-static
    app.kubernetes.io/part-of: gitops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bosnia-static
  ports:
    - name: http
      port: 80
      targetPort: http
